test/dart/lib/bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_field
import 'dart:ffi' as ffi;
import 'package:linux_interactor/interactor/bindings.dart' as linux_interactor;

@ffi.Native<
        ffi.Int Function(ffi.Pointer<interactor_native>,
            ffi.Pointer<interactor_native_configuration>, ffi.Uint8)>(
    symbol: 'interactor_native_initialize', assetId: 'interactor-bindings-test')
external int interactor_native_initialize(
  ffi.Pointer<interactor_native> interactor,
  ffi.Pointer<interactor_native_configuration> configuration,
  int id,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<interactor_native>, ffi.Uint8)>(
    symbol: 'interactor_native_initialize_default',
    assetId: 'interactor-bindings-test')
external int interactor_native_initialize_default(
  ffi.Pointer<interactor_native> interactor,
  int id,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<interactor_native>,
            ffi.Uint64,
            ffi.Uint64,
            ffi.Pointer<
                ffi.NativeFunction<
                    ffi.Void Function(
                        ffi.Pointer<linux_interactor.interactor_message>)>>)>(
    symbol: 'interactor_native_register_callback',
    assetId: 'interactor-bindings-test')
external void interactor_native_register_callback(
  ffi.Pointer<interactor_native> interactor,
  int owner,
  int method,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor.interactor_message>)>>
      callback,
);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<interactor_native>)>(
    symbol: 'interactor_native_get_static_buffer',
    assetId: 'interactor-bindings-test')
external int interactor_native_get_static_buffer(
  ffi.Pointer<interactor_native> interactor,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<interactor_native>, ffi.Int32)>(
    symbol: 'interactor_native_release_static_buffer',
    assetId: 'interactor-bindings-test')
external void interactor_native_release_static_buffer(
  ffi.Pointer<interactor_native> interactor,
  int buffer_id,
);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<interactor_native>)>(
    symbol: 'interactor_native_available_static_buffers',
    assetId: 'interactor-bindings-test')
external int interactor_native_available_static_buffers(
  ffi.Pointer<interactor_native> interactor,
);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<interactor_native>)>(
    symbol: 'interactor_native_used_static_buffers',
    assetId: 'interactor-bindings-test')
external int interactor_native_used_static_buffers(
  ffi.Pointer<interactor_native> interactor,
);

@ffi.Native<
        ffi.Pointer<interactor_input_buffer> Function(
            ffi.Pointer<interactor_native>, ffi.Size)>(
    symbol: 'interactor_native_io_buffers_allocate_input',
    assetId: 'interactor-bindings-test')
external ffi.Pointer<interactor_input_buffer>
    interactor_native_io_buffers_allocate_input(
  ffi.Pointer<interactor_native> interactor,
  int initial_capacity,
);

@ffi.Native<
        ffi.Pointer<interactor_output_buffer> Function(
            ffi.Pointer<interactor_native>, ffi.Size)>(
    symbol: 'interactor_native_io_buffers_allocate_output',
    assetId: 'interactor-bindings-test')
external ffi.Pointer<interactor_output_buffer>
    interactor_native_io_buffers_allocate_output(
  ffi.Pointer<interactor_native> interactor,
  int initial_capacity,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<interactor_native>,
            ffi.Pointer<interactor_input_buffer>)>(
    symbol: 'interactor_native_io_buffers_free_input',
    assetId: 'interactor-bindings-test')
external void interactor_native_io_buffers_free_input(
  ffi.Pointer<interactor_native> interactor,
  ffi.Pointer<interactor_input_buffer> buffer,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<interactor_native>,
            ffi.Pointer<interactor_output_buffer>)>(
    symbol: 'interactor_native_io_buffers_free_output',
    assetId: 'interactor-bindings-test')
external void interactor_native_io_buffers_free_output(
  ffi.Pointer<interactor_native> interactor,
  ffi.Pointer<interactor_output_buffer> buffer,
);

@ffi.Native<
        ffi.Pointer<ffi.Uint8> Function(
            ffi.Pointer<interactor_input_buffer>, ffi.Size)>(
    symbol: 'interactor_native_input_buffer_reserve',
    assetId: 'interactor-bindings-test')
external ffi.Pointer<ffi.Uint8> interactor_native_input_buffer_reserve(
  ffi.Pointer<interactor_input_buffer> buffer,
  int size,
);

@ffi.Native<
        ffi.Pointer<ffi.Uint8> Function(
            ffi.Pointer<interactor_input_buffer>, ffi.Size)>(
    symbol: 'interactor_native_input_buffer_allocate',
    assetId: 'interactor-bindings-test')
external ffi.Pointer<ffi.Uint8> interactor_native_input_buffer_allocate(
  ffi.Pointer<interactor_input_buffer> buffer,
  int size,
);

@ffi.Native<
        ffi.Pointer<ffi.Uint8> Function(
            ffi.Pointer<interactor_output_buffer>, ffi.Size)>(
    symbol: 'interactor_native_output_buffer_reserve',
    assetId: 'interactor-bindings-test')
external ffi.Pointer<ffi.Uint8> interactor_native_output_buffer_reserve(
  ffi.Pointer<interactor_output_buffer> buffer,
  int size,
);

@ffi.Native<
        ffi.Pointer<ffi.Uint8> Function(
            ffi.Pointer<interactor_output_buffer>, ffi.Size)>(
    symbol: 'interactor_native_output_buffer_allocate',
    assetId: 'interactor-bindings-test')
external ffi.Pointer<ffi.Uint8> interactor_native_output_buffer_allocate(
  ffi.Pointer<interactor_output_buffer> buffer,
  int size,
);

@ffi.Native<
        ffi.Pointer<linux_interactor.interactor_message> Function(
            ffi.Pointer<interactor_native>)>(
    symbol: 'interactor_native_allocate_message',
    assetId: 'interactor-bindings-test')
external ffi.Pointer<linux_interactor.interactor_message>
    interactor_native_allocate_message(
  ffi.Pointer<interactor_native> interactor,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<interactor_native>,
            ffi.Pointer<linux_interactor.interactor_message>)>(
    symbol: 'interactor_native_free_message',
    assetId: 'interactor-bindings-test')
external void interactor_native_free_message(
  ffi.Pointer<interactor_native> interactor,
  ffi.Pointer<linux_interactor.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<interactor_payload_pool> Function(
            ffi.Pointer<interactor_native>, ffi.Size)>(
    symbol: 'interactor_native_payload_pool_create',
    assetId: 'interactor-bindings-test')
external ffi.Pointer<interactor_payload_pool>
    interactor_native_payload_pool_create(
  ffi.Pointer<interactor_native> interactor,
  int size,
);

@ffi.Native<
        ffi.Pointer<ffi.Void> Function(ffi.Pointer<interactor_payload_pool>)>(
    symbol: 'interactor_native_payload_allocate',
    assetId: 'interactor-bindings-test')
external ffi.Pointer<ffi.Void> interactor_native_payload_allocate(
  ffi.Pointer<interactor_payload_pool> pool,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<interactor_payload_pool>, ffi.Pointer<ffi.Void>)>(
    symbol: 'interactor_native_payload_free',
    assetId: 'interactor-bindings-test')
external void interactor_native_payload_free(
  ffi.Pointer<interactor_payload_pool> pool,
  ffi.Pointer<ffi.Void> pointer,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<interactor_payload_pool>)>(
    symbol: 'interactor_native_payload_pool_destroy',
    assetId: 'interactor-bindings-test')
external void interactor_native_payload_pool_destroy(
  ffi.Pointer<interactor_payload_pool> pool,
);

@ffi.Native<
        ffi.Pointer<ffi.Void> Function(
            ffi.Pointer<interactor_native>, ffi.Size)>(
    symbol: 'interactor_native_data_allocate',
    assetId: 'interactor-bindings-test')
external ffi.Pointer<ffi.Void> interactor_native_data_allocate(
  ffi.Pointer<interactor_native> interactor,
  int size,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<interactor_native>, ffi.Pointer<ffi.Void>, ffi.Size)>(
    symbol: 'interactor_native_data_free', assetId: 'interactor-bindings-test')
external void interactor_native_data_free(
  ffi.Pointer<interactor_native> interactor,
  ffi.Pointer<ffi.Void> pointer,
  int size,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<interactor_native>)>(
    symbol: 'interactor_native_count_ready',
    assetId: 'interactor-bindings-test')
external int interactor_native_count_ready(
  ffi.Pointer<interactor_native> interactor,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<interactor_native>)>(
    symbol: 'interactor_native_count_ready_submit',
    assetId: 'interactor-bindings-test')
external int interactor_native_count_ready_submit(
  ffi.Pointer<interactor_native> interactor,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<interactor_native>)>(
    symbol: 'interactor_native_process', assetId: 'interactor-bindings-test')
external void interactor_native_process(
  ffi.Pointer<interactor_native> interactor,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<interactor_native>)>(
    symbol: 'interactor_native_process_infinity',
    assetId: 'interactor-bindings-test')
external void interactor_native_process_infinity(
  ffi.Pointer<interactor_native> interactor,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<interactor_native>)>(
    symbol: 'interactor_native_process_timeout',
    assetId: 'interactor-bindings-test')
external void interactor_native_process_timeout(
  ffi.Pointer<interactor_native> interactor,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<interactor_native>,
            ffi.Pointer<
                ffi.NativeFunction<
                    ffi.Void Function(
                        ffi.Pointer<linux_interactor.interactor_message>)>>,
            ffi.Pointer<
                ffi.NativeFunction<
                    ffi.Void Function(
                        ffi.Pointer<linux_interactor.interactor_message>)>>)>(
    symbol: 'interactor_native_foreach', assetId: 'interactor-bindings-test')
external void interactor_native_foreach(
  ffi.Pointer<interactor_native> interactor,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor.interactor_message>)>>
      call,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<linux_interactor.interactor_message>)>>
      callback,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<interactor_native>)>(
    symbol: 'interactor_native_submit', assetId: 'interactor-bindings-test')
external int interactor_native_submit(
  ffi.Pointer<interactor_native> interactor,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<interactor_native>, ffi.Int,
            ffi.Pointer<linux_interactor.interactor_message>)>(
    symbol: 'interactor_native_call_dart', assetId: 'interactor-bindings-test')
external void interactor_native_call_dart(
  ffi.Pointer<interactor_native> interactor,
  int target_ring_fd,
  ffi.Pointer<linux_interactor.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<interactor_native>,
            ffi.Pointer<linux_interactor.interactor_message>)>(
    symbol: 'interactor_native_callback_to_dart',
    assetId: 'interactor-bindings-test')
external void interactor_native_callback_to_dart(
  ffi.Pointer<interactor_native> interactor,
  ffi.Pointer<linux_interactor.interactor_message> message,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<interactor_native>)>(
    symbol: 'interactor_native_destroy', assetId: 'interactor-bindings-test')
external void interactor_native_destroy(
  ffi.Pointer<interactor_native> interactor,
);

@ffi.Native<ffi.Void Function(ffi.Int)>(
    symbol: 'interactor_native_close_descriptor',
    assetId: 'interactor-bindings-test')
external void interactor_native_close_descriptor(
  int fd,
);
